# algopp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Complex_8cpp.html  Complex_8cpp__incl.dot  Complex_8h.html  Complex_8h__dep__incl.dot  Complex_8h__incl.dot  Complex_8h_source.html  Container_8h.html  Container_8h__dep__incl.dot  Container_8h__dep__incl.map  Container_8h__dep__incl.md5  Container_8h_source.html  FourierTransformOpenCL_8cpp.html  FourierTransformOpenCL_8cpp__incl.dot  FourierTransform_8cpp.html  FourierTransform_8cpp__incl.dot  FourierTransform_8h.html  FourierTransform_8h__dep__incl.dot  FourierTransform_8h__incl.dot  FourierTransform_8h_source.html  Function_8h.html  Function_8h__dep__incl.dot  Function_8h__incl.dot  Function_8h_source.html  IFilter_8h.html  IFilter_8h__incl.map  IFilter_8h__incl.md5  IFilter_8h_source.html  IProcessor_8h.html  IProcessor_8h__dep__incl.dot  IProcessor_8h__dep__incl.map  IProcessor_8h__dep__incl.md5  IProcessor_8h__incl.dot  IProcessor_8h__incl.map  IProcessor_8h__incl.md5  IProcessor_8h_source.html  (+398 more)
.devcontainer/: devcontainer.json
.github/: calgopp_arm64.dockerfile  calgopp_x86_64.dockerfile
.github/workflows/: build_tests.yml  build_tests_template.yml  calgopp_CI.yml  calgopp_ci.yml  deployment.yml  environment.yml  quality.yml  quality_template.yml  test.yml  test_template.yml  valgrind.yml
cmake/: Catch2.cmake  doxygen.cmake  etl.cmake  toolchain.cmake
lib/: CMakeLists.txt
lib/algorithm/: CMakeLists.txt
lib/algorithm/include/calgopp/algorithm/: algorithm.h  numeric.h
lib/approximation/: CMakeLists.txt  approximation.cpp
lib/approximation/include/calgopp/approximation/: approximation.h
lib/function/: CMakeLists.txt  LinearFunction.cpp
lib/function/include/calgopp/function/: Function.h  LinearFunction.h
lib/gpu/: CMakeLists.txt  Proxy.cpp
lib/gpu/include/calgopp/gpu/: Proxy.h
lib/math/: CMakeLists.txt  math.cpp  mathBare.cpp  mathCommon.cpp  mathOpenCL.cpp  mathParallel.cpp
lib/math/include/calgopp/math/: math.h
lib/signal/: CMakeLists.txt  FourierTransform.cpp  FourierTransformOpenCL.cpp  Iterator.cpp  Jacymirski.cpp  JacymirskiTransform.cpp  Signal.cpp  SignalOpenCL.cpp
lib/signal/include/algopp/signal/: IFilter.h  Signal.h
lib/signal/include/calgopp/signal/: IFilter.h  IProcessor.h  Iterator.h  Signal.h  factory.h
lib/signal/include/calgopp/signal/transform/: FourierTransform.h  Jacymirski.h  JacymirskiTransform.h
lib/types/: CMakeLists.txt  Complex.cpp  Peak.cpp  Point.cpp
lib/types/include/algopp/types/: Peak.h  Point.h
lib/types/include/calgopp/types/: Complex.h  Container.h  Peak.h  Point.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  files_6.js  files_9.js  functions_0.js  functions_1.js  (+30 more)
test/algorithm/: CMakeLists.txt  test.cpp
test/approximation/: test.cpp
test/function/: CMakeLists.txt  test.cpp
test/math/: CMakeLists.txt  test.cpp
test/signal/: CMakeLists.txt  dataset_generator.py  test.cpp
test/types/: CMakeLists.txt  test.cpp
test/utils/: CMakeLists.txt  Chart.cpp  helpers.cpp
test/utils/include/test/utils/: Chart.h  helpers.h
tools/: calgopp.supp
utils/: sha256.py
